--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME_WORK_9</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.7.0/simplelightbox.min.css">
     <link rel="stylesheet" href="css/common.css"/>
   </head>
   <body>
