--- a/src/2-form.html
+++ b/src/2-form.html
@@ -6,24 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Form</title>
     <link rel="stylesheet" href="css/common.css" />
-    <!-- <link rel="stylesheet" href="css/form.css" /> -->
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
     <form class="feedback-form" autocomplete="off">
-      <label>
+      <label class="form-label">
         Email
-        <input type="email" name="email" autofocus />
+        <input class="input" type="email" name="email" autofocus />
       </label>
-      <label>
+      <label class="form-label">
         Message
-        <textarea name="message" rows="8"></textarea>
+        <textarea class="textarea" name="message" rows="8"></textarea>
       </label>
-      <button type="submit">Submit</button>
+      <button class="btn" type="submit">Submit</button>
     </form>
     
 
-    <script src="/src/js/2-form.js"></script>
+    <script src="/js/2-form.js"></script>
   </body>
 </html>
