--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/common.css"/>
   </head>
   <body>
-    <script src="./js/1-gallery.js"></script>
-    <script src="./js/2-form.js"></script>
-    
+    <ul>
+      <li><a href="./1-gallery.html">Gallery</a></li>
+      <li><a href="./2-form.html">Form</a></li>
+      </ul>
   </body>
 </html>
