--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="css/common.css"/>
   </head>
   <body>
-    <ul>
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
-      </ul>
+ 
+      <load ="public/1-gallery.html" />
+      <load ="public/2-form.html" />
   </body>
 </html>
