--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
  
-      <load ="public/1-gallery.html" />
-      <load ="public/2-form.html" />
+      <load ="./1-gallery.html" />
+      <load ="./2-form.html" />
   </body>
 </html>
