--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,13 @@
   </head>
   <body>
  
-      <load ="1-gallery.html" />
-      <load ="2-form.html" />
+    <ul class="nav">
+      <li class="nav-list">
+        <a href="./1-gallery.html" class="nav-link">Gallery</a>
+      </li>
+      <li class="nav-list">
+        <a href="./2-form.html" class="nav-link">Form</a>
+      </li>
+    </ul>
   </body>
 </html>
