--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="css/common.css"/>
   </head>
   <body>
- 
+ <nav>
     <ul class="nav">
       <li class="nav-list">
-        <a href="./1-gallery.html" class="nav-link">Gallery</a>
+        <a href="./1-gallery.html">Gallery</a>
       </li>
       <li class="nav-list">
-        <a href="./2-form.html" class="nav-link">Form</a>
+        <a href="./2-form.html">Form</a>
       </li>
     </ul>
+  </nav>
+ 
   </body>
 </html>
